--- a/Directory/index.html
+++ b/Directory/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>gemmaliang06.github.io</title>
+        <title>Gemma's Directorie</title>
         <link rel="stylesheet" href="./style.css" />
       </head>
     <body>
         <h1>Gemma's Web Development Work!</h1>
+        <nav>
+            <!-- use UL LI and A for Nav Links within our NAV tag -->
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./websites.html">Websites</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+            <ul>
+                
+            </ul>
+        </nav>
 
     </body>
 </html>
