--- a/Directory/about.html
+++ b/Directory/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact</title>
+    <title>About</title>
     <link rel="stylesheet" href="./style.css" />
     <nav>
     	<!-- use UL LI and A for Nav Links within our NAV tag -->
     	<ul>
-    		<li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./contact.html">Contact</a></li>
             <li><a href="./websites.html">Websites</a></li>
@@ -14,10 +14,11 @@
     </nav>
 </head>
 <body>
-    <h1>Contact</h1>
+    <h1>About</h1>
     <p>
         <ul>
-            <li>Email: gtl2024@nyu.edu</li>
+            <li>Hi! My name is Gemma Liang, and I am a student at New York University. I am studying Integrated Design and Media at the Tandon School of Engineering. On this website, you will find my work from the course, <i>Intro to Web Development</i>.</li>
+           
         </ul>
     </p>
 </body>
