--- a/Directory/index.html
+++ b/Directory/index.html
@@ -10,8 +10,9 @@
             <!-- use UL LI and A for Nav Links within our NAV tag -->
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./websites.html">Websites</a></li>
+                <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./websites.html">Websites</a></li>
             </ul>
             <ul>
                 
