--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <title>Gemma's Directorie</title>
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./Directory/style.css" />
       </head>
     <body>
         <h1>Gemma's Web Development Work!</h1>
         <nav>
             <!-- use UL LI and A for Nav Links within our NAV tag -->
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./websites.html">Websites</a></li>
+                <li><a href="./Directory/index.html">Home</a></li>
+                <li><a href="./Directory/about.html">About</a></li>
+                <li><a href="./Directory/contact.html">Contact</a></li>
+                <li><a href="./Directory/websites.html">Websites</a></li>
             </ul>
             <ul>
                 
