--- a/Directory/Midterm/Portfolio.html
+++ b/Directory/Midterm/Portfolio.html
@@ -20,8 +20,13 @@
             <h2><a href="./Contact.html">Contact</a></h2>
         </div>
 
-        <div class="portfolio">
-            <h2 id="projects"> Projects</h2>
+        <div class="projects">
+            <h1 id="title"> Gemma Liang</h1>
+            <h2 id="title">Mixed Media Artist</h2>
+            <div class="artwork">
+                <p>love at first sight</p>
+                <img src="img/love at first sight.jpeg" />
+              </div>
 
 
 
