--- a/Directory/Midterm/Projects.html
+++ b/Directory/Midterm/Projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gemma Liang</title>
+        <title>Gemma Liang: Projects</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="style.css" />
@@ -14,14 +14,14 @@
         <div class="side">
          <div class="navbar">
             <h2><a href="./Portfolio.html">Home</a></h2>
-            <h2><a href="./Resume.html">Resume</a></h2>
-            <h2><a href="./Contact.html">Contact</a></h2>
             <div class="Projects-container">
                 <h2><a href="./Projects.html">Projects</a></h2>
                 <h3><a href="./Projects.html">Pencil</a></h3>
                 <h3><a href="./Projects.html">Arcylic Painting</a></h3>
                 <h3><a href="./Projects.html">Photography</a></h3>
         </div>
+            <h2><a href="./Resume.html">Resume</a></h2>
+            <h2><a href="./Contact.html">Contact</a></h2>
         </div>
         </div>
 
