--- a/Directory/Midterm/Projects.html
+++ b/Directory/Midterm/Projects.html
@@ -14,14 +14,14 @@
         <div class="side">
          <div class="navbar">
             <h2><a href="./Portfolio.html">Home</a></h2>
+            <h2><a href="./Resume.html">Resume</a></h2>
+            <h2><a href="./Contact.html">Contact</a></h2>
             <div class="Projects-container">
                 <h2><a href="./Projects.html">Projects</a></h2>
                 <h3><a href="./Projects.html">Pencil</a></h3>
                 <h3><a href="./Projects.html">Arcylic Painting</a></h3>
                 <h3><a href="./Projects.html">Photography</a></h3>
         </div>
-            <h2><a href="./Resume.html">Resume</a></h2>
-            <h2><a href="./Contact.html">Contact</a></h2>
         </div>
         </div>
 
@@ -29,13 +29,18 @@
 
         <div class="gallery">
             <div class="artwork">
-                <p>love at first sight</p>
                 <img src="img/love at first sight.jpeg" />
+                <div class="title">
+                    <p>love at first sight</p>
+                </div>
             </div>
 
+
             <div class="artwork">
-                <p>Listen to Her Buzz</p>
                 <img src="img/Listen to Her Buzz_ panel one.jpeg" />
+                <div class="title">
+                    <p>Listen to Her Buzz</p>
+                </div>
             </div>
             
             
