--- a/Directory/Midterm/Projects.html
+++ b/Directory/Midterm/Projects.html
@@ -43,6 +43,26 @@
                 </div>
             </div>
             
+            <div class="artwork">
+                <img src="img/BREATH.jpeg" />
+                <div class="title">
+                    <p>BREATH</p>
+                </div>
+            </div>
+
+            <div class="artwork">
+                <img src="img/Inner Voice.jpeg" />
+                <div class="title">
+                    <p>Inner Voice</p>
+                </div>
+            </div>
+
+            <div class="artwork">
+                <img src="img/SPEAK!.jpeg" />
+                <div class="title">
+                    <p>SPEAK!</p>
+                </div>
+            </div>
             
         </div>
     </div>
