--- a/Directory/Midterm/Carousel.html
+++ b/Directory/Midterm/Carousel.html
@@ -9,33 +9,33 @@
     <body>
         <h1>G. Liang</h1>
         <div class="carousel">
-            <button class="carousel__button carousel__button--left">
+            <button class="carousel__button carousel__button--left is-hidden">
                 <img src="svg/left.svg" alt="" />
             </button>
 
             <div class="carousel__track-container">
                 <ul class="carousel__track">
                     <li class="carousel__slide">
-                    <img class="carousel_image" src="img/love at first sight.jpeg" alt="first artwork" />
+                    <img class="carousel__image" src="img/love at first sight.jpeg" alt="first artwork" />
                     </li>
 
                     <li class="carousel__slide">
                         <div class="panels">
-                    <img class="carousel_image" src="img/Listen to Her Buzz_ panel one.jpeg" alt="second artwork" />
-                    <img class="carousel_image" src="img/Listen to Her Buzz_ panel two.jpeg" alt="second artwork" />
+                    <img class="carousel__image" src="img/Listen to Her Buzz_ panel one.jpeg" alt="second artwork" />
+                    <img class="carousel__image" src="img/Listen to Her Buzz_ panel two.jpeg" alt="second artwork" />
                         </div>
                     </li>
 
                     <li class="carousel__slide">
-                    <img class="carousel_image" src="img/BREATH.jpeg" alt="third artwork" />
+                    <img class="carousel__image" src="img/BREATH.jpeg" alt="third artwork" />
                     </li>
 
                     <li class="carousel__slide">
-                    <img class="carousel_image" src="img/Inner Voice.jpeg" alt="fourth artwork" />
+                    <img class="carousel__image" src="img/Inner Voice.jpeg" alt="fourth artwork" />
                     </li>
 
                     <li class="carousel__slide">
-                    <img class="carousel_image" src="img/SPEAK!.jpeg" alt="fifth artwork" />
+                    <img class="carousel__image" src="img/SPEAK!.jpeg" alt="fifth artwork" />
                     </li>
                 </ul>
             </div>
