--- a/Directory/Midterm/Carousel.html
+++ b/Directory/Midterm/Carousel.html
@@ -20,10 +20,10 @@
                     </li>
 
                     <li class="carousel__slide">
-                        <div class="panels">
-                    <img class="carousel__image" src="img/Listen to Her Buzz_ panel one.jpeg" alt="second artwork" />
+                        <!-- <div class="panels"> -->
+                    <!-- <img class="carousel__image" src="img/Listen to Her Buzz_ panel one.jpeg" alt="second artwork" /> -->
                     <img class="carousel__image" src="img/Listen to Her Buzz_ panel two.jpeg" alt="second artwork" />
-                        </div>
+                        <!-- </div> -->
                     </li>
 
                     <li class="carousel__slide">
