--- a/Directory/Midterm/Projects.html
+++ b/Directory/Midterm/Projects.html
@@ -29,7 +29,7 @@
 
         <div class="gallery">
             <div class="artwork">
-                <img src="img/love at first sight.jpeg" />
+                <a href="./Carousel.html"><img src="img/love at first sight.jpeg"></a>
                 <div class="title">
                     <p>love at first sight</p>
                 </div>
@@ -37,28 +37,28 @@
 
 
             <div class="artwork">
-                <img src="img/Listen to Her Buzz_ panel one.jpeg" />
+                <a href="./Carousel.html"><img src="img/Listen to Her Buzz_ panel two.jpeg" /></a>
                 <div class="title">
                     <p>Listen to Her Buzz</p>
                 </div>
             </div>
             
             <div class="artwork">
-                <img src="img/BREATH.jpeg" />
+                <a href="./Carousel.html"><img src="img/BREATH.jpeg" /></a>
                 <div class="title">
                     <p>BREATH</p>
                 </div>
             </div>
 
             <div class="artwork">
-                <img src="img/Inner Voice.jpeg" />
+                <a href="./Carousel.html"><img src="img/Inner Voice.jpeg" /></a>
                 <div class="title">
                     <p>Inner Voice</p>
                 </div>
             </div>
 
             <div class="artwork">
-                <img src="img/SPEAK!.jpeg" />
+                <a href="./Carousel.html"></a><img src="img/SPEAK!.jpeg" /></a>
                 <div class="title">
                     <p>SPEAK!</p>
                 </div>
