--- a/Directory/Midterm/Resume.html
+++ b/Directory/Midterm/Resume.html
@@ -25,22 +25,87 @@
         </div>
         </div>
 
-        <div class="main">
+        <div class="resume">
+            <div class="res1-container">
+                <h2>Education</h2>
+                <h4>High School</h4>
+                <p>Branksome Hall</p>
+                <p>International Baccalaureate Diploma</p>
+                <p>September 2020 - May 2024</p>
+                <p>Toronto, ON</p>
+                <br>
+                <h4>Undergraduate</h4>
+                <p>New York University - Tandon School of Engineering</p>
+                <p>Bachelor of Science</p>
+                <p>September 2024 - May 2028</p>
+                <p>New York, NY</p>
+                <br>
+                </div>
 
-        <div class="gallery">
-            <div class="artwork">
-                <p>love at first sight</p>
-                <img src="img/love at first sight.jpeg" />
+            <div class="res2-container">
+                <h2>Experience</h2>
+                <h4>Investment Intern</h4>
+                <p>Purpose Investments</p>
+                <p>June 2024 - August 2024</p>
+                <p>Toronto, ON</p>
+            <ul>
+                <li>Researched and evaluated various companies, inquiring about potential investment opportunities with a central focus on renewable energy and special care home companies.</li>
+                <li>Gained experience in an office workspace, collaborating and learning about the investment industry from senior mentors.</li>
+            </ul>
+                <br>
+                <h4>Camp Counselor</h4>
+                <p>Onondaga Camp</p>
+                <p>June 2022 - August 2023</p>
+                <p>Minden Hills, ON</p>
+            <ul>
+                <li>Cared for children between the ages of 6-14 years old.</li>
+                <li>Initiated and planned activities for campers in groups and individually.</li>
+                <li>Worked at a range of outdoor activities, acquiring new teaching skills.</li>
+            </ul>
+            <br>
+                <h4>Student Volunteer</h4>
+                <p>Sunny View Public School</p>
+                <p>September 2020 - June 2024</p>
+                <p>Toronto, ON</p>
+            <ul>
+                <li>Worked with young children with special needs to aid them in their daily activities as well as helping them to build life-skills.</li>
+                <li>Designed and distributed yearbooks for the whole school.</li>
+                <li>Encouraged and engaged my peers to increase their involvement in the school.</li>
+            </ul>
             </div>
 
-            <div class="artwork">
-                <p>Listen to Her Buzz</p>
-                <img src="img/Listen to Her Buzz_ panel one.jpeg" />
+            <div class="res3-container">
+                <h2>Skills</h2>
+                <h4>Technological Skills</h4>
+                <p>Adobe Photoshop</p>
+                <p>Adobe Illustrator - Professional Certificate</p>
+                <p>Adobe InDesign</p>
+                <p>Adobe Acrobat</p>
+                <p>Adobe XD</p>
+                <p>Procreate</p>
+                <p>JavaScript</p>
+                <p>Arduino</p>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>Microsoft Excel</p>
+                <br>
+                <h4>Artistic Skills</h4>
+                <p>Photography</p>
+                <p>Painting</p>
+                <p>Pencil drawing</p>
+                <p>Charcoal and Chalk Drawing</p>
+                <br>
+                <h4>Language Skills</h4>
+                <p>Fluent in English</p>
+                <p>Professional proficiency in French and Spanish</p>
+                <br>
+                <h4>Social Media Platforms</h4>
+                <p>Instagram</p>
+                <p>Facebook</p> 
+                <p>Twitter</p>
+                <p>LinkedIn</p>
+                <p>TikTok</p>
             </div>
-            
-            
-        </div>
-    </div>
     </div>
     </body>
 </html>
