--- a/Directory/Midterm/Carousel.html
+++ b/Directory/Midterm/Carousel.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>G. Liang</h1>
+        <h1><a href="./Portfolio.html"></a>G. Liang</h1>
         <div class="carousel">
             <button class="carousel__button carousel__button--left is-hidden">
                 <img src="svg/left.svg" alt="" />
