--- a/Directory/Midterm/Portfolio.html
+++ b/Directory/Midterm/Portfolio.html
@@ -8,8 +8,10 @@
     </head>
 
     <body>
-        <h1>G. Liang</h1>
-        <div class="row">
+
+        <h1><a href="./Portfolio.html"></a>G. Liang</h1>
+     
+            <div class="row">
 
         <div class="side">
          <div class="navbar">
