--- a/Directory/Midterm/Projects.html
+++ b/Directory/Midterm/Projects.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
-        <h1>G. Liang</h1>
+  
+        <h1><a href="./Portfolio.html"></a>G. Liang</h1>
+
         <div class="row">
 
         <div class="side">
@@ -29,39 +31,44 @@
 
         <div class="gallery">
             <div class="artwork">
-                <a href="./Carousel.html"><img src="img/love at first sight.jpeg"></a>
+                <a href="./Carousel.html"><img src="img/love at first sight.jpeg">
                 <div class="title">
                     <p>love at first sight</p>
                 </div>
+            </a>
             </div>
 
 
             <div class="artwork">
-                <a href="./Carousel.html"><img src="img/Listen to Her Buzz_ panel two.jpeg" /></a>
+                <a href="./Carousel.html"><img src="img/Listen to Her Buzz_ panel two.jpeg" />
                 <div class="title">
                     <p>Listen to Her Buzz</p>
                 </div>
+            </a>
             </div>
             
             <div class="artwork">
-                <a href="./Carousel.html"><img src="img/BREATH.jpeg" /></a>
+                <a href="./Carousel.html"><img src="img/BREATH.jpeg" />
                 <div class="title">
                     <p>BREATH</p>
                 </div>
+            </a>
             </div>
 
             <div class="artwork">
-                <a href="./Carousel.html"><img src="img/Inner Voice.jpeg" /></a>
+                <a href="./Carousel.html"><img src="img/Inner Voice.jpeg" />
                 <div class="title">
                     <p>Inner Voice</p>
                 </div>
+            </a>
             </div>
 
             <div class="artwork">
-                <a href="./Carousel.html"></a><img src="img/SPEAK!.jpeg" /></a>
+                <a href="./Carousel.html"></a><img src="img/SPEAK!.jpeg" />
                 <div class="title">
                     <p>SPEAK!</p>
                 </div>
+            </a>
             </div>
             
         </div>
