--- a/Directory/Midterm/Projects.html
+++ b/Directory/Midterm/Projects.html
@@ -9,7 +9,7 @@
 
     <body>
   
-        <h1><a href="./Portfolio.html"></a>G. Liang</h1>
+            <h1>G. Liang</h1>
 
         <div class="row">
 
