--- a/Directory/websites.html
+++ b/Directory/websites.html
@@ -16,6 +16,7 @@
     <p>
         <ul>
             <li><a href="./RecipePage.html">Recipe Page</a></li>
+            <li><a href="/Midterm/Portfolio.html">Portfolio</a></li>
         </ul>
     </p>
 </body>
