--- a/Directory/Midterm/Contact.html
+++ b/Directory/Midterm/Contact.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <h1><a href="./Portfolio.html"></a>G. Liang</h1>
+        <h1>G. Liang</h1>
         <div class="row">
 
         <div class="side">
