--- a/Directory/Midterm/pencil.html
+++ b/Directory/Midterm/pencil.html
@@ -5,8 +5,6 @@
     </head>
 
     <body>
-        <h1><a href="./Portfolio.html"></a>G. Liang</h1>
-
-
+        <h1>G. Liang</h1>
     </body>
 </html>
