--- a/Directory/Midterm/pencil.html
+++ b/Directory/Midterm/pencil.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Gemma Liang: Projects</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="./style.css" />
     </head>
 
     <body>
+  
         <h1>G. Liang</h1>
-    </body>
+
+    <div class="row">
+
+    <div class="side">
+     <div class="navbar">
+        <h2><a href="./Portfolio.html">Home</a></h2>
+        <h2><a href="./Resume.html">Resume</a></h2>
+        <h2><a href="./Contact.html">Contact</a></h2>
+        <div class="Projects-container">
+            <h2><a href="./Projects.html">Projects</a></h2>
+            <h3><a href="./Projects.html">Pencil</a></h3>
+            <h3><a href="./Projects.html">Arcylic Painting</a></h3>
+            <h3><a href="./Projects.html">Photography</a></h3>
+    </div>
+    </div>
+    </div>
+
+    <div class="main">
+
+    <div class="pencil">
+        <div class="artwork">
+           <img src="img/love at first sight.jpeg">
+            <div class="description">
+            <ol>
+                <p><b>love at first sight</b></p>
+                <p>20”/10”
+                    Graphite pencil</p>
+                    <br>
+                <p>
+                    Based on a photograph taken of me and my sister on the day I was born,
+                     this drawing depicts our first moment together. Illustrating a portrait 
+                     in pencil transforms a picture taken in one “click” into an intimate 
+                     viewing of texture and contrast to appreciate the full significance of 
+                     the moment. Brought into focus by the subjects’ surrounding negative space 
+                     and imaginary and actual leading lines, me and my sister’s connection is 
+                     displayed by her gentle touch on my forehead.</p>
+            </ol>
+            </div>
+        </div>
+
+
+        <div class="artwork">
+            <img scr="img/Listen to Her Buzz_panel one.jpeg" />
+            <img src="img/Listen to Her Buzz_ panel two.jpeg" />
+            <div class="description">
+            <ol>
+                <p><b>Listen To Her Buzz</b></p>
+                <p>7”/5” per panel
+                    Graphite pencil and coloured pencil</p>
+                    <br>
+                <p>
+                    In my life, my mom stands as the pinnacle role model of a strong female, 
+                    inspiring me with her constant proactivity and reliability as a pillar of 
+                    support. With intention to demonstrate my admiration of these qualities 
+                    through my art, I found that a working bee serves as a relevant metaphor for 
+                    the characteristics my mom holds. A bee is at times overlooked in its 
+                    integral role in supporting the outdoor environment, yet by taking a closer 
+                    inspection, we can appreciate all that it creates.</p>
+
+            </ol>
+            </div>
+     
+        </div>
+        
+    </div>
+</div>
+</div>
+</body>
+
 </html>
