--- a/Directory/Midterm/pencil.html
+++ b/Directory/Midterm/pencil.html
@@ -30,8 +30,10 @@
     <div class="main">
 
     <div class="pencil">
-        <div class="artwork">
+        <div class="project_section">
+        <div class="project_section_artworks">
            <img src="img/love at first sight.jpeg">
+        </div>
             <div class="description">
             <ol>
                 <p><b>love at first sight</b></p>
@@ -51,9 +53,13 @@
         </div>
 
 
-        <div class="artwork">
-            <img scr="img/Listen to Her Buzz_panel one.jpeg" />
+        <div class="project_section">
+            <div class="project_section_artworks">
+                <div class="project_section_container">
+            <img src="img/Listen to Her Buzz_ panel one.jpeg" />
             <img src="img/Listen to Her Buzz_ panel two.jpeg" />
+                </div>
+            </div>
             <div class="description">
             <ol>
                 <p><b>Listen To Her Buzz</b></p>
