--- a/Directory/Midterm/Portfolio.html
+++ b/Directory/Midterm/Portfolio.html
@@ -20,7 +20,7 @@
             <h2><a href="./Contact.html">Contact</a></h2>
             <div class="Projects-container">
                 <h2><a href="./Projects.html">Projects</a></h2>
-                <h3><a href="./Projects.html">Pencil</a></h3>
+                <h3><a href="./pencil.html">Pencil</a></h3>
                 <h3><a href="./Projects.html">Arcylic Painting</a></h3>
                 <h3><a href="./Projects.html">Photography</a></h3>
         </div>
