--- a/Directory/Midterm/Contact/Contact.html
+++ b/Directory/Midterm/Contact/Contact.html
@@ -4,7 +4,8 @@
         <title>Gemma Liang: Contact</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="/Users/gemmaliang/Desktop/Web_Development/gemmaliang06.github.io/Directory/Midterm/style.css"/>
+        <link rel="stylesheet" href="./contact.css" />
     </head>
 
     <body>
