--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="slideshowstyle.css" />
-    </head>
+        <link rel="stylesheet" href="../style.css" />  
     <body>
         <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -13,37 +13,37 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 6</div>
-      <img src="img/love at first sight.jpeg" style="width:100%">
+      <img src="../img/love at first sight.jpeg" style="width:100%">
       <div class="text">Caption Text</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 6</div>
-      <img src="img2.jpg" style="width:100%">
+      <img src="../img/Listen to Her Buzz_ panel one.jpeg" style="width:100%">
       <div class="text">Caption Two</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 6</div>
-      <img src="img3.jpg" style="width:100%">
+      <img src="../img/Listen to Her Buzz_ panel two.jpeg" style="width:100%">
       <div class="text">Caption Three</div>
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext">4 / 6</div>
-        <img src="img2.jpg" style="width:100%">
+        <img src="../img/BREATH.jpeg" style="width:100%">
         <div class="text">Caption Two</div>
       </div>
 
     <div class="mySlides fade">
         <div class="numbertext">5 / 6</div>
-        <img src="img2.jpg" style="width:100%">
+        <img src="../img/Inner Voice.jpeg" style="width:100%">
         <div class="text">Caption Two</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">6 / 6</div>
-        <img src="img2.jpg" style="width:100%">
+        <img src="../img/SPEAK!.jpeg" style="width:100%">
         <div class="text">Caption Two</div>
       </div>
   
