--- a/Directory/websites.html
+++ b/Directory/websites.html
@@ -18,7 +18,7 @@
             <li><a href="./RecipePage.html">Recipe Page</a></li>
         </ul>
         <ul>
-            <li><a href="./Midterm/Portfolio.html">Portfolio</a></li>
+            <li><a href="./Midterm/Home/index.html">Portfolio</a></li>
         </ul>
     </p>
 </body>
