--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -4,16 +4,40 @@
         <title>Gemma Liang</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="Midterm --- style.css" />
+        <link rel="stylesheet" href="../style.css" />
     </head>
 
     <body>
 
             <h1>G. Liang</h1>
-     
-            <div class="row">
 
-        <div class="side">
+        <!-- Side navigation -->
+<div class="sidenav">
+    <a href="index.html">Home</a>
+    <a href="../Resume/Resume.html">Resume</a>
+    <a href="../Contact/Contact.html">Contact</a>
+    <div class="Projects-container">
+        <a href="../Projects/Projects.html">Projects</a>
+        <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
+        <h3><a href="./Projects.html">Arcylic Painting</a></h3>
+        <h3><a href="./Projects.html">Photography</a></h3>
+</div>
+  </div>
+  
+  <!-- Page content -->
+  <div class="main">
+    <div class="welcome">
+        <ul>
+            <h2>Welcome to my portfolio!</h2>
+            <h3>My name is Gemma Liang, and I am an artist from Toronto, based in New York. 
+                Currently I am studying at NYU, in the Integrated Design and Media program 
+                learning more about UX/UI design. On my website you will find much of my 
+                artwork using more traditional mediums. Stay tuned for more to come!
+            </h3>
+        </ul>
+
+        </div>
+  <!-- </div>
          <div class="navbar">
             <h2><a href="./Portfolio.html">Home</a></h2>
             <h2><a href="./Resume.html">Resume</a></h2>
@@ -25,24 +49,6 @@
                 <h3><a href="./Projects.html">Photography</a></h3>
         </div>
         </div>
-        </div>
-
-        <div class="main">
-
-        <div class="welcome">
-        <ul>
-            <h2>Welcome to my portfolio!</h2>
-            <h3>My name is Gemma Liang, and I am an artist from Toronto, based in New York. 
-                Currently I am studying at NYU, in the Integrated Design and Media program 
-                learning more about UX/UI design. On my website you will find much of my 
-                artwork using more traditional mediums. Stay tuned for more to come!
-            </h3>
-        </ul>
-
-        </div>
-
-        
-    </div>
-    </div>
+        </div> -->
     </body>
 </html>
