--- a/Directory/Midterm/Projects/Mediums/pencil.html
+++ b/Directory/Midterm/Projects/Mediums/pencil.html
@@ -4,7 +4,8 @@
         <title>Gemma Liang: Projects</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="./projectsstyle.css" />
+        <link rel="stylesheet" href="./mediumsstyle.css" />
+        <link rel="stylesheet" href="../../style.css" />
     </head>
 
     <body>
@@ -32,7 +33,7 @@
     <div class="pencil">
         <div class="project_section">
         <div class="project_section_artworks">
-           <img src="img/love at first sight.jpeg">
+           <img src="../img/love at first sight.jpeg">
         </div>
             <div class="description">
             <ol>
@@ -56,8 +57,8 @@
         <div class="project_section">
             <div class="project_section_artworks">
                 <div class="project_section_container">
-            <img src="img/Listen to Her Buzz_ panel one.jpeg" />
-            <img src="img/Listen to Her Buzz_ panel two.jpeg" />
+            <img src="../img/Listen to Her Buzz_ panel one.jpeg" />
+            <img src="../img/Listen to Her Buzz_ panel two.jpeg" />
                 </div>
             </div>
             <div class="description">
