--- a/Directory/Midterm/Resume/Resume.html
+++ b/Directory/Midterm/Resume/Resume.html
@@ -4,7 +4,8 @@
         <title>Gemma Liang: Resume</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="resume.css" />
+        <link rel="stylesheet" href="../style.css" />
     </head>
 
     <body>
