--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -7,6 +7,22 @@
         <link rel="stylesheet" href="slideshowstyle.css" />
         <link rel="stylesheet" href="../style.css" />  
     <body>
+
+    
+
+        <div class="sidenav">
+            <a href="../Home/index.html">Home</a>
+            <a href="../Resume/Resume.html">Resume</a>
+            <a href="../Contact/Contact.html">Contact</a>
+            <div class="Projects-container">
+                <a href="../Projects/Projects.html">Projects</a>
+                <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
+                <h3><a href="./Projects.html">Arcylic Painting</a></h3>
+                <h3><a href="./Projects.html">Photography</a></h3>
+        </div>
+          </div>
+
+    <div class="main">
         <!-- Slideshow container -->
 <div class="slideshow-container">
 
@@ -62,6 +78,8 @@
     <span class="dot" onclick="currentSlide(5)"></span>
     <span class="dot" onclick="currentSlide(6)"></span>
   </div>
+
+</div>
         <script src="Slideshow.js"></script>
     </body>
 </html>
