--- a/Directory/Midterm/Contact/Contact.html
+++ b/Directory/Midterm/Contact/Contact.html
@@ -11,21 +11,19 @@
 
     <body>
         <h1>G. Liang</h1>
-        <div class="row">
-
-        <div class="side">
-         <div class="navbar">
-            <h2><a href="./Portfolio.html">Home</a></h2>
-            <h2><a href="./Resume.html">Resume</a></h2>
-            <h2><a href="./Contact.html">Contact</a></h2>
+        
+<div class="row">
+        <div class="sidenav">
+            <a href="../Home/index.html">Home</a>
+            <a href="../Resume/Resume.html">Resume</a>
+            <a href="../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
-                <h2><a href="./Projects.html">Projects</a></h2>
-                <h3><a href="./Projects.html">Pencil</a></h3>
+                <a href="../Projects/Projects.html">Projects</a>
+                <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
                 <h3><a href="./Projects.html">Arcylic Painting</a></h3>
                 <h3><a href="./Projects.html">Photography</a></h3>
         </div>
-        </div>
-        </div>
+          </div>
 
         <div class="main">
 
@@ -49,6 +47,6 @@
                 </form>
               </div>
     </div>
-    </div>
+</div>
     </body>
 </html>
