--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -5,11 +5,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="../style.css" />
+        <link rel="stylesheet" href="indexstyle.css" />
     </head>
 
     <body>
 
             <h1>G. Liang</h1>
+
+<div class="row">
 
         <!-- Side navigation -->
 <div class="sidenav">
@@ -37,18 +40,9 @@
         </ul>
 
         </div>
-  <!-- </div>
-         <div class="navbar">
-            <h2><a href="./Portfolio.html">Home</a></h2>
-            <h2><a href="./Resume.html">Resume</a></h2>
-            <h2><a href="./Contact.html">Contact</a></h2>
-            <div class="Projects-container">
-                <h2><a href="./Projects.html">Projects</a></h2>
-                <h3><a href="./pencil.html">Pencil</a></h3>
-                <h3><a href="./Projects.html">Arcylic Painting</a></h3>
-                <h3><a href="./Projects.html">Photography</a></h3>
-        </div>
-        </div>
-        </div> -->
+
+    </div>
+
+</div>
     </body>
 </html>
