--- a/Directory/Midterm/Contact/Contact.html
+++ b/Directory/Midterm/Contact/Contact.html
@@ -20,8 +20,8 @@
             <div class="Projects-container">
                 <a href="../Projects/Projects.html">Projects</a>
                 <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
-                <h3><a href="./Projects.html">Arcylic Painting</a></h3>
-                <h3><a href="./Projects.html">Photography</a></h3>
+                <h3><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></h3>
+                <h3><a href="../Projects/Mediums/photography.html">Photography</a></h3>
         </div>
           </div>
 
