--- a/Directory/Midterm/Projects/Mediums/pencil.html
+++ b/Directory/Midterm/Projects/Mediums/pencil.html
@@ -20,7 +20,7 @@
                 <a href="../Projects/Projects.html">Projects</a>
                 <h3><a href="./pencil.html">Pencil</a></h3>
                 <h3><a href="./acrylic.html">Arcylic Painting</a></h3>
-                <h3><a href="./Projects.html">Photography</a></h3>
+                <h3><a href="./photography.html">Photography</a></h3>
         </div>
           </div>
     
