--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -5,20 +5,22 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="slideshowstyle.css" />
-        <link rel="stylesheet" href="../style.css" />  
+        <link rel="stylesheet" href="../../style.css" />  
     <body>
 
-    
+    <h1>G.Liang</h1>
+
+    <div class="row">
 
         <div class="sidenav">
             <a href="../Home/index.html">Home</a>
             <a href="../Resume/Resume.html">Resume</a>
             <a href="../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
-                <a href="../Projects/Projects.html">Projects</a>
+                <a href="../Projects.html">Projects</a>
                 <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
-                <h3><a href="./Projects.html">Arcylic Painting</a></h3>
-                <h3><a href="./Projects.html">Photography</a></h3>
+                <h3><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></h3>
+                <h3><a href="../Projects/Mediums/photography.html">Photography</a></h3>
         </div>
           </div>
 
@@ -28,39 +30,39 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-      <div class="numbertext">1 / 6</div>
+      <div class="numbertext"></div>
       <img src="../img/love at first sight.jpeg" style="width:100%">
-      <div class="text">Caption Text</div>
+      <div class="text"><i>love at first sight</i></div>
     </div>
   
     <div class="mySlides fade">
-      <div class="numbertext">2 / 6</div>
+      <div class="numbertext"></div>
       <img src="../img/Listen to Her Buzz_ panel one.jpeg" style="width:100%">
-      <div class="text">Caption Two</div>
+      <div class="text"><i>Listen To Her Buzz </i>(1)</div>
     </div>
   
     <div class="mySlides fade">
-      <div class="numbertext">3 / 6</div>
+      <div class="numbertext"></div>
       <img src="../img/Listen to Her Buzz_ panel two.jpeg" style="width:100%">
-      <div class="text">Caption Three</div>
+      <div class="text"><i>Listen To Her Buzz </i>(2)</div>
     </div>
 
     <div class="mySlides fade">
-        <div class="numbertext">4 / 6</div>
+        <div class="numbertext"></div>
         <img src="../img/BREATH.jpeg" style="width:100%">
-        <div class="text">Caption Two</div>
+        <div class="text"><i>BREATH</i></div>
       </div>
 
     <div class="mySlides fade">
-        <div class="numbertext">5 / 6</div>
+        <div class="numbertext"></div>
         <img src="../img/Inner Voice.jpeg" style="width:100%">
-        <div class="text">Caption Two</div>
+        <div class="text"><i>Inner Voice</i></div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">6 / 6</div>
+        <div class="numbertext"></div>
         <img src="../img/SPEAK!.jpeg" style="width:100%">
-        <div class="text">Caption Two</div>
+        <div class="text"><i>SPEAK!</i></div>
       </div>
   
     <!-- Next and previous buttons -->
@@ -79,6 +81,7 @@
     <span class="dot" onclick="currentSlide(6)"></span>
   </div>
 
+</div>
 </div>
         <script src="Slideshow.js"></script>
     </body>
