--- a/Directory/Midterm/Resume/Resume.html
+++ b/Directory/Midterm/Resume/Resume.html
@@ -4,7 +4,7 @@
         <title>Gemma Liang: Resume</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="resume.css" />
+        <link rel="stylesheet" href="resumestyle.css" />
         <link rel="stylesheet" href="../style.css" />
     </head>
 
@@ -23,6 +23,8 @@
                     <h3><a href="../Projects/Mediums/photography.html">Photography</a></h3>
             </div>
               </div>
+
+        <div class="main">
 
         <div class="resume">
             <div class="res1-container">
@@ -106,5 +108,6 @@
                 <p>TikTok</p>
             </div>
     </div>
+</div>
     </body>
 </html>
