--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -38,6 +38,7 @@
                 artwork using more traditional mediums. Stay tuned for more to come!
             </h3>
         </ul>
+        <img src="./profile.JPG" alt="Gemma Liang">
 
         </div>
 
