--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -13,9 +13,9 @@
     <div class="row">
 
         <div class="sidenav">
-            <a href="../Home/index.html">Home</a>
-            <a href="../Resume/Resume.html">Resume</a>
-            <a href="../Contact/Contact.html">Contact</a>
+            <a href="../../Home/index.html">Home</a>
+            <a href="../../Resume/Resume.html">Resume</a>
+            <a href="../../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
                 <a href="../Projects.html">Projects</a>
                 <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
