--- a/Directory/Midterm/Loading/loading.html
+++ b/Directory/Midterm/Loading/loading.html
@@ -4,9 +4,11 @@
         <title>Gemma Liang: Projects</title>
         <link rel="stylesheet" href="./style.css" />  
     <body>
-        <div class="loading" data-splitting >
-            LOADING
-          </div>
+
+        <button id="button" onclick="typeWriter()">PRESS ME </button>
+      
+        <p id="loading"></p>
+
 
           <script src="loading.js"></script>
           
