--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -10,23 +10,24 @@
 
     <body>
 
-        <div class="logo">
-            <img src="./../imgs/logo_1.png" class="logo_1>
-      
-            <img src="./../imgs/logo_2.png" class="logo_2">
-        </div>
+        
 
 <div class="row">
 
         <!-- Side navigation -->
 <div class="sidenav">
+    <div class="logo">
+        <img src="./../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
+  
+        <img src="./../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+    </div>
     <a href="../Resume/Resume.html">Resume</a>
     <a href="../Contact/Contact.html">Contact</a>
     <div class="Projects-container">
         <a href="../Projects/Projects.html">Projects</a>
-        <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
-        <h3><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></h3>
-        <h3><a href="../Projects/Mediums/photography.html">Photography</a></h3>
+        <p><a href="../Projects/Mediums/pencil.html">Pencil</a></p>
+        <p><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></p>
+        <p><a href="../Projects/Mediums/photography.html">Photography</a></p>
 </div>
   </div>
   
@@ -35,10 +36,10 @@
     <div class="welcome">
         <ul>
             <h2>Welcome to my portfolio!</h2>
-            <h3>My name is Gemma Liang, and I am an artist from Toronto, based in New York. 
-                Currently I am studying at NYU, in the Integrated Design and Media program 
-                learning more about UX/UI design. On my website you will find much of my 
-                artwork using more traditional mediums. Stay tuned for more to come!
+            <h3>My name is Gemma Liang, an artist from Toronto, based in New York. 
+                I am currently studying at NYU in the Integrated Design and Media program 
+                with a focus on UX/UI design. On my website you will find much of my 
+                artwork using more traditional media. Stay tuned for more to come!
             </h3>
         </ul>
         <img src="./profile.JPG" alt="Gemma Liang">
