--- a/Directory/Midterm/Contact/Contact.html
+++ b/Directory/Midterm/Contact/Contact.html
@@ -10,17 +10,21 @@
     </head>
 
     <body>
-        <h1>G. Liang</h1>
         
 <div class="row">
         <div class="sidenav">
+            <div class="logo">
+                <img src="./../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
+          
+                <img src="./../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+            </div>
             <a href="../Resume/Resume.html">Resume</a>
             <a href="../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
                 <a href="../Projects/Projects.html">Projects</a>
-                <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
-                <h3><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></h3>
-                <h3><a href="../Projects/Mediums/photography.html">Photography</a></h3>
+                <p><a href="../Projects/Mediums/pencil.html">Pencil</a></p>
+                <p><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></p>
+                <p><a href="../Projects/Mediums/photography.html">Photography</a></p>
         </div>
           </div>
 
