--- a/Directory/Midterm/Projects/Mediums/pencil.html
+++ b/Directory/Midterm/Projects/Mediums/pencil.html
@@ -9,20 +9,22 @@
     </head>
 
     <body>
-  
-        <h1>G. Liang</h1>
 
         <div class="sidenav">
-            <a href="../../Resume/Resume.html">Resume</a>
-            <a href="../../Contact/Contact.html">Contact</a>
+            <div class="logo">
+                <img src="./../../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
+          
+                <img src="./../../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+            </div>
+            <a href="../Resume/Resume.html">Resume</a>
+            <a href="../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
-                <a href="../Projects/Projects.html">Projects</a>
-                <h3><a href="./pencil.html">Pencil</a></h3>
-                <h3><a href="./acrylic.html">Arcylic Painting</a></h3>
-                <h3><a href="./photography.html">Photography</a></h3>
+                <a href="../Projects.html">Projects</a>
+                <p><a href="./pencil.html">Pencil</a></p>
+                <p><a href=".acrylic.html">Arcylic Painting</a></p>
+                <p><a href="./photography.html">Photography</a></p>
         </div>
           </div>
-    
 <div class="row">
 
     <div class="main">
