--- a/Directory/Midterm/Projects/Mediums/photography.html
+++ b/Directory/Midterm/Projects/Mediums/photography.html
@@ -10,21 +10,24 @@
 
     <body>
 
-            <h1>G. Liang</h1>
-
 <div class="row">
 
         <!-- Side navigation -->
-<div class="sidenav">
-    <a href="../../Resume/Resume.html">Resume</a>
-    <a href="../../Contact/Contact.html">Contact</a>
-    <div class="Projects-container">
-        <a href="../Projects.html">Projects</a>
-        <h3><a href="./pencil.html">Pencil</a></h3>
-        <h3><a href="./acrylic.html">Arcylic Painting</a></h3>
-        <h3><a href="./photography.html">Photography</a></h3>
-</div>
-  </div>
+        <div class="sidenav">
+            <div class="logo">
+                <img src="./../../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
+          
+                <img src="./../../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+            </div>
+            <a href="../Resume/Resume.html">Resume</a>
+            <a href="../Contact/Contact.html">Contact</a>
+            <div class="Projects-container">
+                <a href="../Projects.html">Projects</a>
+                <p><a href="./pencil.html">Pencil</a></p>
+                <p><a href=".acrylic.html">Arcylic Painting</a></p>
+                <p><a href="./photography.html">Photography</a></p>
+        </div>
+          </div>
   
   <!-- Page content -->
   <div class="main">
