--- a/Directory/Midterm/Contact/Contact.html
+++ b/Directory/Midterm/Contact/Contact.html
@@ -14,9 +14,9 @@
 <div class="row">
         <div class="sidenav">
             <div class="logo">
-                <img src="./../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
+                <img src="./../imgs/logo_1.png" href="./../Home/index.html" class="logo_1" alt="logo top">
           
-                <img src="./../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+                <img src="./../imgs/logo_2.png" href="./../Home/index.html" class="logo_2" alt="logo bottom">
             </div>
             <a href="../Resume/Resume.html">Resume</a>
             <a href="../Contact/Contact.html">Contact</a>
