--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -16,10 +16,15 @@
 
         <!-- Side navigation -->
 <div class="sidenav">
-    <div class="logo">
-        <img src="./../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
-  
-        <img src="./../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+    <div class="logo"> 
+        <p href="index.html">
+            <img src="./../imgs/logo_1.png" class="logo_1" alt="logo top">
+        </p>
+
+        <p href="index.html">
+            <img src="./../imgs/logo_2.png" class="logo_2" alt="logo bottom">
+        </p>
+ 
     </div>
     <a href="../Resume/Resume.html">Resume</a>
     <a href="../Contact/Contact.html">Contact</a>
@@ -35,14 +40,14 @@
   <div class="main">
     <div class="welcome">
         <ul>
-            <h2>Welcome to my portfolio!</h2>
-            <h3>My name is Gemma Liang, an artist from Toronto, based in New York. 
-                I am currently studying at NYU in the Integrated Design and Media program 
-                with a focus on UX/UI design. On my website you will find much of my 
-                artwork using more traditional media. Stay tuned for more to come!
-            </h3>
+            <h1 class="line-1">HELLO THERE, </h1>
+            <h1 class="line-2">I'm Gemma, an artist from Toronto, based in New York.</h1>
+            <h1 class="line-3"> I am currently studying at NYU in the Integrated Design and Media program 
+                with a focus on UX/UI design.</h1>
+            <h1 class="line-4">On my website you will find much of my 
+                artwork using more traditional media. Stay tuned for more to come!</h1>
         </ul>
-        <img src="./profile.JPG" alt="Gemma Liang">
+        <!-- <img src="./profile.JPG" alt="Gemma Liang"> -->
 
         </div>
 
