--- a/Directory/Midterm/Projects/Mediums/acrylic.html
+++ b/Directory/Midterm/Projects/Mediums/acrylic.html
@@ -21,7 +21,7 @@
             <div class="Projects-container">
                 <a href="../Projects.html">Projects</a>
                 <p><a href="./pencil.html">Pencil</a></p>
-                <p><a href=".acrylic.html">Arcylic Painting</a></p>
+                <p><a href="./acrylic.html">Arcylic Painting</a></p>
                 <p><a href="./photography.html">Photography</a></p>
         </div>
           </div>
