--- a/Directory/Midterm/Projects/Mediums/pencil.html
+++ b/Directory/Midterm/Projects/Mediums/pencil.html
@@ -12,9 +12,13 @@
 
         <div class="sidenav">
             <div class="logo">
-                <img src="./../../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
-          
-                <img src="./../../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+                <p href="index.html">
+                    <img src="./../../imgs/logo_1.png" class="logo_1" alt="logo top">
+                </p>
+        
+                <p href="index.html">
+                    <img src="./../../imgs/logo_2.png" class="logo_2" alt="logo bottom">
+                </p>
             </div>
             <a href="../Resume/Resume.html">Resume</a>
             <a href="../Contact/Contact.html">Contact</a>
@@ -28,7 +32,7 @@
 <div class="row">
 
     <div class="main">
-
+        <marquee scrollamount="15">Pencil       Pencil      Pencil </marquee>
     <div class="gallery_mediums">
         <div class="project_section">
         <div class="project_section_artworks">
