--- a/Directory/Midterm/Projects/Mediums/pencil.html
+++ b/Directory/Midterm/Projects/Mediums/pencil.html
@@ -12,20 +12,20 @@
 
         <div class="sidenav">
             <div class="logo">
-                <p href="index.html">
+                <a href="./../../Home/index.html">
                     <img src="./../../imgs/logo_1.png" class="logo_1" alt="logo top">
-                </p>
+                </a>
         
-                <p href="index.html">
+                <a href="./../../Home/index.html">
                     <img src="./../../imgs/logo_2.png" class="logo_2" alt="logo bottom">
-                </p>
+                </a>
             </div>
-            <a href="../Resume/Resume.html">Resume</a>
-            <a href="../Contact/Contact.html">Contact</a>
+            <a href="../../Resume/Resume.html">Resume</a>
+            <a href="../../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
                 <a href="../Projects.html">Projects</a>
                 <p><a href="./pencil.html">Pencil</a></p>
-                <p><a href=".acrylic.html">Arcylic Painting</a></p>
+                <p><a href="./acrylic.html">Arcylic Painting</a></p>
                 <p><a href="./photography.html">Photography</a></p>
         </div>
           </div>
