--- a/Directory/Midterm/Projects/Mediums/photography.html
+++ b/Directory/Midterm/Projects/Mediums/photography.html
@@ -15,9 +15,13 @@
         <!-- Side navigation -->
         <div class="sidenav">
             <div class="logo">
-                <img src="./../../imgs/logo_1.png" href="index.html" class="logo_1" alt="logo top">
-          
-                <img src="./../../imgs/logo_2.png" href="index.html" class="logo_2" alt="logo bottom">
+                <a href="./../../Home/index.html">
+                    <img src="./../../imgs/logo_1.png" class="logo_1" alt="logo top">
+                </a>
+        
+                <a href="./../../Home/index.html">
+                    <img src="./../../imgs/logo_2.png" class="logo_2" alt="logo bottom">
+                </a>
             </div>
             <a href="../Resume/Resume.html">Resume</a>
             <a href="../Contact/Contact.html">Contact</a>
