--- a/Directory/Midterm/Resume/Resume.html
+++ b/Directory/Midterm/Resume/Resume.html
@@ -8,19 +8,27 @@
         <link rel="stylesheet" href="../style.css" />
     </head>
 
-    <body>
-        <h1>G. Liang</h1>
+    <body></body>
         <div class="row">
 
             <div class="sidenav">
-                <a href="../Home/index.html">Home</a>
+                <div class="logo"> 
+                    <a href="./../Home/index.html">
+                        <img src="./../imgs/logo_1.png" class="logo_1" alt="logo top">
+                    </a>
+            
+                    <a href="./../Home/index.html">
+                        <img src="./../imgs/logo_2.png" class="logo_2" alt="logo bottom">
+                    </a>
+             
+                </div>
                 <a href="../Resume/Resume.html">Resume</a>
                 <a href="../Contact/Contact.html">Contact</a>
                 <div class="Projects-container">
                     <a href="../Projects/Projects.html">Projects</a>
-                    <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
-                    <h3><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></h3>
-                    <h3><a href="../Projects/Mediums/photography.html">Photography</a></h3>
+                    <p><a href="../Projects/Mediums/pencil.html">Pencil</a></p>
+                    <p><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></p>
+                    <p><a href="../Projects/Mediums/photography.html">Photography</a></p>
             </div>
               </div>
 
