--- a/Directory/Midterm/Contact/Contact.html
+++ b/Directory/Midterm/Contact/Contact.html
@@ -14,13 +14,13 @@
 <div class="row">
         <div class="sidenav">
             <div class="logo">
-                <p href="index.html">
+                <a href="./../Home/index.html">
                     <img src="./../imgs/logo_1.png" class="logo_1" alt="logo top">
-                </p>
+                </a>
         
-                <p href="index.html">
+                <a href="./../Home/index.html">
                     <img src="./../imgs/logo_2.png" class="logo_2" alt="logo bottom">
-                </p>
+                </a>
             </div>
             <a href="../Resume/Resume.html">Resume</a>
             <a href="../Contact/Contact.html">Contact</a>
