--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="../style.css" />
         <link rel="stylesheet" href="indexstyle.css" />
+
+        <script src="../main.js"></script>
     </head>
 
     <body>
@@ -13,17 +15,18 @@
         
 
 <div class="row">
+    <div id="circle-cursor"></div>
 
         <!-- Side navigation -->
 <div class="sidenav">
     <div class="logo"> 
-        <p href="index.html">
+        <a href="index.html">
             <img src="./../imgs/logo_1.png" class="logo_1" alt="logo top">
-        </p>
+        </a>
 
-        <p href="index.html">
+        <a href="index.html">
             <img src="./../imgs/logo_2.png" class="logo_2" alt="logo bottom">
-        </p>
+        </a>
  
     </div>
     <a href="../Resume/Resume.html">Resume</a>
@@ -45,7 +48,8 @@
             <h1 class="line-3"> I am currently studying at NYU in the Integrated Design and Media program 
                 with a focus on UX/UI design.</h1>
             <h1 class="line-4">On my website you will find much of my 
-                artwork using more traditional media. Stay tuned for more to come!</h1>
+                artwork using more traditional media.</h1>
+            <h1 class="line-5">Stay tuned for more to come!</h1>
         </ul>
         <!-- <img src="./profile.JPG" alt="Gemma Liang"> -->
 
