--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -8,18 +8,26 @@
         <link rel="stylesheet" href="../../style.css" />  
     <body>
 
-    <h1>G.Liang</h1>
 
     <div class="row">
 
         <div class="sidenav">
+          <div class="logo">
+            <p href="./../../Home/index.html">
+                <img src="./../../imgs/logo_1.png" class="logo_1" alt="logo top">
+            </p>
+    
+            <p href="./../../Home/index.html">
+                <img src="./../../imgs/logo_2.png" class="logo_2" alt="logo bottom">
+            </p>
+            </div>
             <a href="../../Resume/Resume.html">Resume</a>
             <a href="../../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
                 <a href="../Projects.html">Projects</a>
-                <h3><a href="../Projects/Mediums/pencil.html">Pencil</a></h3>
-                <h3><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></h3>
-                <h3><a href="../Projects/Mediums/photography.html">Photography</a></h3>
+                <p><a href="../Projects/Mediums/pencil.html">Pencil</a></p>
+                <p><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></p>
+                <p><a href="../Projects/Mediums/photography.html">Photography</a></p>
         </div>
           </div>
 
