--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -33,9 +33,9 @@
     <a href="../Contact/Contact.html">Contact</a>
     <div class="Projects-container">
         <a href="../Projects/Projects.html">Projects</a>
-        <p><a href="../Projects/Mediums/pencil.html">Pencil</a></p>
-        <p><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></p>
-        <p><a href="../Projects/Mediums/photography.html">Photography</a></p>
+        <p><a href="../Projects/Mediums/pencil.html" class="medium">Pencil</a></p>
+        <p><a href="../Projects/Mediums/acrylic.html" class="medium">Arcylic Painting</a></p>
+        <p><a href="../Projects/Mediums/photography.html" class="medium">Photography</a></p>
 </div>
   </div>
   
