--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -6,11 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="slideshowstyle.css" />
         <link rel="stylesheet" href="../../style.css" />  
+
+        <script src="../main.js"></script>
     <body>
 
 
     <div class="row">
-
+      <div id="circle-cursor"></div>
         <div class="sidenav">
           <div class="logo">
             <p href="./../../Home/index.html">
