--- a/Directory/Midterm/Contact/Contact.html
+++ b/Directory/Midterm/Contact/Contact.html
@@ -7,11 +7,14 @@
         <link rel="stylesheet" href="/Users/gemmaliang/Desktop/Web_Development/gemmaliang06.github.io/Directory/Midterm/style.css"/>
         <link rel="stylesheet" href="./contact.css" />
         <link rel="stylesheet" href="../style.css" />
+
+        <script src="../main.js"></script>
     </head>
 
     <body>
         
 <div class="row">
+    <div id="circle-cursor"></div>
         <div class="sidenav">
             <div class="logo">
                 <a href="./../Home/index.html">
@@ -26,9 +29,9 @@
             <a href="../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
                 <a href="../Projects/Projects.html">Projects</a>
-                <p><a href="../Projects/Mediums/pencil.html">Pencil</a></p>
-                <p><a href="../Projects/Mediums/acrylic.html">Arcylic Painting</a></p>
-                <p><a href="../Projects/Mediums/photography.html">Photography</a></p>
+                <p><a href="../Projects/Mediums/pencil.html" class="medium">Pencil</a></p>
+                <p><a href="../Projects/Mediums/acrylic.html" class="medium">Arcylic Painting</a></p>
+                <p><a href="../Projects/Mediums/photography.html" class="medium">Photography</a></p>
         </div>
           </div>
 
