--- a/Directory/Midterm/Projects/Mediums/pencil.html
+++ b/Directory/Midterm/Projects/Mediums/pencil.html
@@ -4,12 +4,16 @@
         <title>Gemma Liang: Projects</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="./mediumsstyle.css" />
         <link rel="stylesheet" href="../../style.css" />
+        <link rel="stylesheet" href="./mediumsstyle.css" />
+
+        <script src="../../main.js"></script>
+        
     </head>
 
     <body>
-
+        <div class="row">
+         <div id="circle-cursor"></div>
         <div class="sidenav">
             <div class="logo">
                 <a href="./../../Home/index.html">
@@ -23,13 +27,13 @@
             <a href="../../Resume/Resume.html">Resume</a>
             <a href="../../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
-                <a href="../Projects.html">Projects</a>
-                <p><a href="./pencil.html">Pencil</a></p>
-                <p><a href="./acrylic.html">Arcylic Painting</a></p>
-                <p><a href="./photography.html">Photography</a></p>
+                <a href="../Projects.html" class="medium">Projects</a>
+                <p><a href="./pencil.html" class="medium">Pencil</a></p>
+                <p><a href="./acrylic.html" class="medium">Arcylic Painting</a></p>
+                <p><a href="./photography.html" class="medium">Photography</a></p>
         </div>
           </div>
-<div class="row">
+
 
     <div class="main">
         <marquee scrollamount="15">Pencil       Pencil      Pencil </marquee>
