--- a/Directory/Midterm/Resume/Resume.html
+++ b/Directory/Midterm/Resume/Resume.html
@@ -6,11 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="resumestyle.css" />
         <link rel="stylesheet" href="../style.css" />
+
+        <script src="../main.js"></script>
     </head>
 
     <body></body>
         <div class="row">
-
+            <div id="circle-cursor"></div>
             <div class="sidenav">
                 <div class="logo"> 
                     <a href="./../Home/index.html">
