--- a/Directory/Midterm/Home/index.html
+++ b/Directory/Midterm/Home/index.html
@@ -29,6 +29,8 @@
         </a>
  
     </div>
+    
+    <!-- <a href="#" class="btn btn-seven w-inline-block"><div><span>Gemma Liang</span></div></a> -->
     <a href="../Resume/Resume.html">Resume</a>
     <a href="../Contact/Contact.html">Contact</a>
     <div class="Projects-container">
