--- a/Directory/Midterm/Projects/Mediums/pencil.html
+++ b/Directory/Midterm/Projects/Mediums/pencil.html
@@ -27,7 +27,7 @@
             <a href="../../Resume/Resume.html">Resume</a>
             <a href="../../Contact/Contact.html">Contact</a>
             <div class="Projects-container">
-                <a href="../Projects.html" class="medium">Projects</a>
+                <a href="../Projects.html" >Projects</a>
                 <p><a href="./pencil.html" class="medium">Pencil</a></p>
                 <p><a href="./acrylic.html" class="medium">Arcylic Painting</a></p>
                 <p><a href="./photography.html" class="medium">Photography</a></p>
@@ -36,7 +36,7 @@
 
 
     <div class="main">
-        <marquee scrollamount="15">Pencil       Pencil      Pencil </marquee>
+        <marquee scrollamount="15">Pencil Pencil Pencil</marquee>
     <div class="gallery_mediums">
         <div class="project_section">
         <div class="project_section_artworks">
