--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="slideshowstyle.css" />
         <link rel="stylesheet" href="../../style.css" />  
 
-        <script src="../main.js"></script>
+        <script src="../../main.js"></script>
+    </head>
     <body>
 
 
